Implementado ServicioProtectoras